--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                         <p class="text-sm sm:text-base text-gray-700 leading-relaxed max-w-lg">
                             Rubies Micro Insurance offers affordable and flexible insurance solutions
                             tailored to your lifestyle and business. With fast claims, seamless digital
-                            access, and support you can trust, we make insurance easy—so
+                            access, and support you can trust, we make insurance easy, so
                             you can focus on living.
                         </p>
 
