--- a/media.html
+++ b/media.html
@@ -506,7 +506,7 @@
     </div>
 
     <div class="mobile-menu-content">
-        <a href="index.html" class="mobile-nav-link active" onclick="closeMobileMenu()">Home</a>
+        <a href="index.html" class="mobile-nav-link" onclick="closeMobileMenu()">Home</a>
         <a href="about.html" class="mobile-nav-link" onclick="closeMobileMenu()">About Us</a>
 
         <!-- Mobile Products Dropdown -->
