--- a/claims.html
+++ b/claims.html
@@ -408,7 +408,7 @@
                         Call our dedicated claims hotline for immediate assistance
                     </p>
                     <a href="tel:+2348012345678" class="text-sm font-medium hover:underline" style="color: #CB4662;">
-                        +234 801 234 5678
+                        +234 812 110 3989
                     </a>
                 </div>
 
@@ -434,7 +434,7 @@
                         Send us an email and we'll respond within 24 hours
                     </p>
                     <a href="mailto:claims@rubiesmicroinsurance.com" class="text-sm font-medium hover:underline" style="color: #CB4662;">
-                        claims@rubies.com
+                        claims@rubies.ng
                     </a>
                 </div>
             </div>
