--- a/claims.html
+++ b/claims.html
@@ -72,7 +72,7 @@
                                         </div>
                                         <div>
                                             <h4 class="font-semibold text-gray-900 text-sm mb-1">Tenant's Guarantee {10G}</h4>
-                                            <p class="text-xs text-gray-600 leading-relaxed">Savings Policy to enable the insured save towards their rents</p>
+                                            <p class="text-xs text-gray-600 leading-relaxed">Savings Policy to enable the Assured save towards their rents</p>
                                             <span class="text-xs text-yellow-600 font-medium">Life Insurance</span>
                                         </div>
                                     </a>
