--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                                             </div>
                                             <div>
                                                 <h4 class="font-semibold text-gray-900 text-sm mb-1">Tenant's Guarantee {10G}</h4>
-                                                <p class="text-xs text-gray-600 leading-relaxed">Savings Policy to enable the insured save towards their rents</p>
+                                                <p class="text-xs text-gray-600 leading-relaxed">Savings Policy to enable the Assured save towards their rents</p>
                                                 <span class="text-xs text-yellow-600 font-medium">Life Insurance</span>
                                             </div>
                                         </a>
@@ -572,7 +572,7 @@
                         </div>
                     </div>
                     <div class="min-w-72 sm:min-w-80 h-72 sm:h-80 md:h-96 relative overflow-hidden rounded-lg shadow-lg">
-                        <div class="absolute inset-0 bg-cover bg-center" style="background-image: url('https://images.pexels.com/photos/1681010/pexels-photo-1681010.jpeg?auto=compress&cs=tinysrgb&w=400');">
+                        <div class="absolute inset-0 bg-cover bg-center" style="background-image: url('https://media.licdn.com/dms/image/v2/D4D03AQE9YbYZbQxQVQ/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1721584295124?e=1756944000&v=beta&t=zzSBNLN5MGuD_zWRUkYFUb6ge3UE05hP5WDPMdQkeTY');">
                             <div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent"></div>
                         </div>
                         <div class="relative z-10 h-full flex flex-col justify-end p-4 sm:p-6 text-white">
@@ -580,7 +580,7 @@
                                 <div class="flex items-center gap-1 mb-3">
                                     <span class="text-yellow-400">⭐⭐⭐⭐⭐</span>
                                 </div>
-                                <h3 class="font-bold text-base sm:text-lg mb-2">Tope O.</h3>
+                                <h3 class="font-bold text-base sm:text-lg mb-2">Chiedozie N.</h3>
                                 <p class="text-xs sm:text-sm opacity-90">After a burglary at my shop, Rubies handled everything quickly. So grateful!</p>
                             </div>
                         </div>
@@ -605,10 +605,10 @@
             <!-- Join Section -->
             <div class="text-center mb-8 sm:mb-12 md:mb-16 px-4">
                 <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold text-gray-900 mb-4">
-                    Join Rubies And Experience Greatness
+                    Join Rubies Insurance
                 </h2>
                 <p class="text-sm sm:text-base md:text-lg text-gray-600 mb-6 sm:mb-8">
-                    Chat, send money, pay bills, and more with Rubies - the all-in-one app
+                    Insurance Brought Home
                 </p>
 
                 <div class="flex flex-col sm:flex-row justify-center gap-4 mb-8 sm:mb-12 md:mb-16">
