--- a/products.html
+++ b/products.html
@@ -71,7 +71,7 @@
                                         </div>
                                         <div>
                                             <h4 class="font-semibold text-gray-900 text-sm mb-1">Tenant's Guarantee {10G}</h4>
-                                            <p class="text-xs text-gray-600 leading-relaxed">Savings Policy to enable the insured save towards their rents</p>
+                                            <p class="text-xs text-gray-600 leading-relaxed">Savings Policy to enable the Assured save towards their rents</p>
                                             <span class="text-xs text-yellow-600 font-medium">Life Insurance</span>
                                         </div>
                                     </a>
@@ -227,7 +227,7 @@
                         <span class="text-xs px-2 py-1 rounded-full font-medium" style="background-color: #DBEAFE; color: #1D4ED8;">Life Insurance</span>
                     </div>
                     <p class="text-sm sm:text-base text-gray-600 mb-6">
-                        Savings Policy to enable the insured save towards their rents. A unique savings plan designed to help tenants secure their housing needs.
+                        Savings Policy to enable the Assured save towards their rents. A unique savings plan designed to help tenants secure their housing needs.
                     </p>
                     <ul class="space-y-2 mb-6">
                         <li class="flex items-center gap-2 text-sm text-gray-600">
