--- a/contact.html
+++ b/contact.html
@@ -200,7 +200,7 @@
                         Speak with our customer service team
                     </p>
                     <a href="tel:+2348012345678" class="text-sm font-medium hover:underline" style="color: #CB4662;">
-                        +234 801 234 5678
+                        +234 812 110 3989
                     </a>
                     <p class="text-xs text-gray-500 mt-1">Mon-Fri 8AM-6PM</p>
                 </div>
@@ -215,8 +215,9 @@
                         Send us a message anytime
                     </p>
                     <a href="mailto:support@rubiesmicroinsurance.com" class="text-sm font-medium hover:underline" style="color: #CB4662;">
-                        support@rubies.com
+                        info@rubies.ng
                     </a>
+
                     <p class="text-xs text-gray-500 mt-1">24-hour response time</p>
                 </div>
 
@@ -230,8 +231,8 @@
                         Come to our office location
                     </p>
                     <address class="text-sm font-medium not-italic" style="color: #CB4662;">
-                        123 Insurance Plaza<br>
-                        Victoria Island, Lagos
+                        Opposite Cluster A Gate <br>
+                        1004 Estate Victoria Island Lagos Nigeria
                     </address>
                     <p class="text-xs text-gray-500 mt-1">Mon-Fri 9AM-5PM</p>
                 </div>
